syntax="proto3";

package company_service;
option go_package="genproto/company_service";

enum ServiceType {
    NOT_SPECIFIED = 0;
    BUILDER_SERVICE = 1;
    ANALYTICS_SERVICE = 2;
}

enum ResourceType {
    NOT_DECIDED = 0;
    MONGODB = 1;
    CLICKHOUSE = 2;
    POSTGRESQL = 3;
}

message Resource {
    message Credentials {
        string host = 1;
        string port = 2;
        string username = 3;
        string password = 4;
        string database = 5;
    }
    ServiceType service_type = 1;
    ResourceType resource_type = 2;
    Credentials credentials = 3;
    string id = 4;
    string title = 5;
}

message Environment {
    string id = 1;
    string project_id = 2;
    string name = 3;
    string display_color = 4;
    string description = 5;
}

message EnvironmentWithResources {
    message Resources {
        int32 count = 1;
        repeated Resource resources = 2;
    }

    string id = 1;
    string project_id = 2;
    string name = 3;
    string display_color = 4;
    string description = 5;
    Resources resources = 6;
}

message ResourceEnvironment {
    string project_id = 1;
    string resource_id = 2;
    string environment_id = 3;
    bool is_configured = 4;
}